--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://aryan:aryan@cluster0.mi1js.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://aryan:aryan@cluster0.wva4i.mongodb.net/?retryWrites=true&w=majority
 SECRET_KEY = aryan
