--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://netflix12.onrender.com/api/auth/login"
+  "proxy": "https://netflix12.onrender.com"
 }
