--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://netflix12.onrender.com"
+  "proxy": {
+      "/api/auth/login": "https://netflix12.onrender.com"
+  }
 }
